made a filter button and got to know what stateHook do

--- a/index.css
+++ b/index.css
@@ -56,6 +56,8 @@
     flex-wrap: wrap;
 }
 
-.search-bar {
-    padding: 10px;
+.filter-btn {
+    /* padding: 10px; */
+    margin: 10px;
+    cursor: pointer;
 }
