--- a/index.css
+++ b/index.css
@@ -61,3 +61,19 @@
     margin: 10px;
     cursor: pointer;
 }
+ 
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    margin: 10px;
+    width: 200px;
+    height: 300px;
+    background-color:#f0f0f0 ;
+}
+.login{
+    padding: 0 30px;
+    cursor: pointer;
+    
+}
