Made a search box made it functional using useState and onChange

--- a/index.css
+++ b/index.css
@@ -12,7 +12,14 @@
     object-fit: contain;
     display: block;
 }
-
+.filter{
+    display: flex;
+    justify-content: space-evenly;
+}
+.search{
+    margin: 10px;
+     
+}
 /* Nav bar styles */
 .nav-items > ul {
     display: flex;
