--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 }
 .filter{
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 .search{
     margin: 10px;
